fix: align params to top (#431)

--- a/packages/api-explorer/style/main.scss
+++ b/packages/api-explorer/style/main.scss
@@ -97,7 +97,7 @@ form.rjsf fieldset .form-group:first-of-type {
 form.rjsf fieldset .form-group {
   display: flex;
   flex-flow: row nowrap;
-  align-items: center;
+  align-items: flex-start;
   align-content: center;
 }
 
